# tensor-trees

./: CMakeLists.txt  LICENSE  README.md
include/: Algorithms.hxx  Builder.hxx  Epsilon.hxx  Eta.hxx  Indices.hxx  LinearAlgebra.hxx  Node.hxx  Scalar.hxx  Tensor.hxx  Tree.hxx  eval.hxx  vanish.hxx  vanish_2.hxx
prs/: area_1st_kinetic.prs.xz  area_1st_mass.prs.xz  area_2nd_kinetic.prs.xz  area_2nd_mass.prs.xz
src/: Algorithms.cxx  Builder.cxx  Epsilon.cxx  Eta.cxx  Indices.cxx  LinearAlgebra.cxx  Node.cxx  Scalar.cxx  Tensor.cxx  algebra.cxx  delta.cxx  diffeo.cxx  load.cxx  load_mat.cxx  main.cxx  main2.cxx  main_area_1st.cxx  main_area_1st_equations.cxx  main_area_1st_mass.cxx  main_area_2nd.cxx  main_area_2nd_equations_kinetic.cxx  main_area_2nd_equations_mass.cxx  main_area_2nd_mass.cxx  main_metric_1st.cxx  main_metric_1st_equations.cxx  main_metric_2nd.cxx  test.cxx
src/area/: ansatz_A.cxx  ansatz_AB.cxx  ansatz_ABC.cxx  ansatz_ABCI.cxx  ansatz_ABI.cxx  ansatz_ABICJ.cxx  ansatz_ABpCq.cxx  ansatz_AI.cxx  ansatz_AIBC.cxx  ansatz_AIBJ.cxx  ansatz_ApBq.cxx  ansatz_ApBqCI.cxx  dof.cxx
src/metric_from_area/: main_ansatz_10.cxx  main_ansatz_14.cxx  main_ansatz_2.cxx  main_ansatz_6.cxx  main_metric_from_area.cxx  main_metric_from_area_0_1.cxx
