cmake_minimum_required(VERSION 3.9)

project(tensor-trees)

#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Wno-int-in-bool-context")

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

set(EIGEN_INCLUDE ~/.local/include/eigen3)

find_package(Boost COMPONENTS serialization REQUIRED)

include_directories(${CMAKE_SOURCE_DIR}/include ${EIGEN_INCLUDE})
add_library(tensor-trees SHARED src/Node src/Tensor src/Epsilon src/Eta src/Scalar src/Algorithms src/Indices src/Builder src/LinearAlgebra)
#[[
add_executable(main_area_2nd src/main_area_2nd)
add_executable(main_area_2nd_mass src/main_area_2nd_mass)
add_executable(main_area_1st src/main_area_1st)
add_executable(main_area_1st_mass src/main_area_1st_mass)
add_executable(main_area_1st_equations src/main_area_1st_equations)
add_executable(main_area_2nd_equations_mass src/main_area_2nd_equations_mass)
add_executable(main_area_2nd_equations_kinetic src/main_area_2nd_equations_kinetic)
add_executable(main_metric_1st src/main_metric_1st)
add_executable(main_metric_2nd src/main_metric_2nd)
add_executable(main_metric_1st_equations src/main_metric_1st_equations)
add_executable(main_metric_from_area_0_1 src/metric_from_area/main_metric_from_area_0_1)
add_executable(main_ansatz_2 src/metric_from_area/main_ansatz_2)
add_executable(main_ansatz_6 src/metric_from_area/main_ansatz_6)
add_executable(main_ansatz_10 src/metric_from_area/main_ansatz_10)
add_executable(main_ansatz_14 src/metric_from_area/main_ansatz_14)
add_executable(main_metric_from_area src/metric_from_area/main_metric_from_area)
add_executable(test src/test)
add_executable(diffeo src/diffeo)
add_executable(delta src/delta)
add_executable(load src/load)
add_executable(algebra src/algebra)
]]
#[[
target_link_libraries(main_area_2nd tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_area_2nd_mass tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_area_1st tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_area_1st_mass tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_area_1st_equations tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_area_2nd_equations_mass tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_area_2nd_equations_kinetic tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_metric_1st tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_metric_2nd tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_metric_1st_equations tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_metric_from_area_0_1 tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_ansatz_2 tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_ansatz_6 tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_ansatz_10 tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_ansatz_14 tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(main_metric_from_area tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(test tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(diffeo tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(delta tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(load tensor-trees gmp gmpxx ${Boost_LIBRARIES})
target_link_libraries(algebra tensor-trees gmp gmpxx ${Boost_LIBRARIES})
]]
add_executable(ansatz_AIBK src/area/ansatz_AIBJ)
target_link_libraries(ansatz_AIBJ tensor-trees gmp gmpxx ${Boost_LIBRARIES})
